--- a/SoccerBet.Android/SoccerBet.Android.csproj
+++ b/SoccerBet.Android/SoccerBet.Android.csproj
@@ -147,5 +147,8 @@
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\principal.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
