--- a/SoccerBet.UWP/SoccerBet.UWP.csproj
+++ b/SoccerBet.UWP/SoccerBet.UWP.csproj
@@ -104,6 +104,7 @@
     <None Include="SoccerBet.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="principal.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
