--- a/SoccerBet.Android/SoccerBet.Android.csproj
+++ b/SoccerBet.Android/SoccerBet.Android.csproj
@@ -54,6 +54,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseConnection_Android.cs" />
+    <Compile Include="DatabaseConnection_AndroidAsync.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -74,6 +76,9 @@
   <ItemGroup>
     <PackageReference Include="SampleBrowser.Core">
       <Version>19.2.0.44</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.7.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Syncfusion.Xamarin.SfTreeView" Version="19.2.0.44" />
