--- a/SoccerBet.UWP/SoccerBet.UWP.csproj
+++ b/SoccerBet.UWP/SoccerBet.UWP.csproj
@@ -92,6 +92,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DatabaseConnection_UWP.cs" />
+    <Compile Include="DatabaseConnection_UWPAsync.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -159,6 +161,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.4" />
     <PackageReference Include="SampleBrowser.Core">
       <Version>19.2.0.44</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.7.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Syncfusion.Xamarin.SfTreeView" Version="19.2.0.44" />
