--- a/SoccerBet.iOS/SoccerBet.iOS.csproj
+++ b/SoccerBet.iOS/SoccerBet.iOS.csproj
@@ -88,6 +88,8 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DatabaseConnection_iOS.cs" />
+    <Compile Include="DatabaseConnection_iOSAsync.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
@@ -121,6 +123,9 @@
   <ItemGroup>
     <PackageReference Include="SampleBrowser.Core">
       <Version>19.2.0.44</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.7.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
     <PackageReference Include="Syncfusion.Xamarin.SfTreeView" Version="19.2.0.44" />
