--- a/SoccerBet/SoccerBet.csproj
+++ b/SoccerBet/SoccerBet.csproj
@@ -8,7 +8,7 @@
 <PackageReference Include="SampleBrowser.Core" Version="19.2.0.44" />
 <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
 <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
-<PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+<PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
 <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
 <PackageReference Include="Syncfusion.Xamarin.SfTreeView" Version="19.2.0.44" />
 <PackageReference Include="Syncfusion.Xamarin.SfTreeMap" Version="19.2.0.44" />
@@ -213,6 +213,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Views\Login.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Menu.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
