--- a/SoccerBet.UWP/SoccerBet.UWP.csproj
+++ b/SoccerBet.UWP/SoccerBet.UWP.csproj
@@ -106,6 +106,182 @@
     <None Include="SoccerBet.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bandiere\Africa.png" />
+    <Content Include="Bandiere\Albania.png" />
+    <Content Include="Bandiere\Algeria.png" />
+    <Content Include="Bandiere\Andorra.png" />
+    <Content Include="Bandiere\Angola.png" />
+    <Content Include="Bandiere\Argentina.png" />
+    <Content Include="Bandiere\Armenia.png" />
+    <Content Include="Bandiere\Aruba.png" />
+    <Content Include="Bandiere\Asia.png" />
+    <Content Include="Bandiere\Australia &amp; Oceania.png" />
+    <Content Include="Bandiere\Australia.png" />
+    <Content Include="Bandiere\Austria.png" />
+    <Content Include="Bandiere\Azerbaijan.png" />
+    <Content Include="Bandiere\Bahrain.png" />
+    <Content Include="Bandiere\Bangladesh.png" />
+    <Content Include="Bandiere\Belarus.png" />
+    <Content Include="Bandiere\Belgium.png" />
+    <Content Include="Bandiere\Benin.png" />
+    <Content Include="Bandiere\Bermuda.png" />
+    <Content Include="Bandiere\Bolivia.png" />
+    <Content Include="Bandiere\Bosnia and Herzegovina.png" />
+    <Content Include="Bandiere\Botswana.png" />
+    <Content Include="Bandiere\Brazil.png" />
+    <Content Include="Bandiere\Bulgaria.png" />
+    <Content Include="Bandiere\Burkina Faso.png" />
+    <Content Include="Bandiere\Burundi.png" />
+    <Content Include="Bandiere\Cambodia.png" />
+    <Content Include="Bandiere\Cameroon.png" />
+    <Content Include="Bandiere\Canada.png" />
+    <Content Include="Bandiere\Cape Verde.png" />
+    <Content Include="Bandiere\Chile.png" />
+    <Content Include="Bandiere\China.png" />
+    <Content Include="Bandiere\Colombia.png" />
+    <Content Include="Bandiere\Costa Rica.png" />
+    <Content Include="Bandiere\Croatia.png" />
+    <Content Include="Bandiere\Curaçao.png" />
+    <Content Include="Bandiere\Cyprus.png" />
+    <Content Include="Bandiere\Czech Republic.png" />
+    <Content Include="Bandiere\Denmark.png" />
+    <Content Include="Bandiere\Djibouti.png" />
+    <Content Include="Bandiere\Dominican Republic.png" />
+    <Content Include="Bandiere\DR Congo.png" />
+    <Content Include="Bandiere\Ecuador.png" />
+    <Content Include="Bandiere\Egypt.png" />
+    <Content Include="Bandiere\El Salvador.png" />
+    <Content Include="Bandiere\England.png" />
+    <Content Include="Bandiere\Estonia.png" />
+    <Content Include="Bandiere\Eswatini.png" />
+    <Content Include="Bandiere\Ethiopia.png" />
+    <Content Include="Bandiere\Europe.png" />
+    <Content Include="Bandiere\Faroe Islands.png" />
+    <Content Include="Bandiere\Fiji.png" />
+    <Content Include="Bandiere\Finland.png" />
+    <Content Include="Bandiere\France.png" />
+    <Content Include="Bandiere\Gabon.png" />
+    <Content Include="Bandiere\Gambia.png" />
+    <Content Include="Bandiere\Georgia.png" />
+    <Content Include="Bandiere\Germany.png" />
+    <Content Include="Bandiere\Ghana.png" />
+    <Content Include="Bandiere\Gibraltar.png" />
+    <Content Include="Bandiere\Greece.png" />
+    <Content Include="Bandiere\Guatemala.png" />
+    <Content Include="Bandiere\Guinea.png" />
+    <Content Include="Bandiere\Haiti.png" />
+    <Content Include="Bandiere\Honduras.png" />
+    <Content Include="Bandiere\Hong Kong.png" />
+    <Content Include="Bandiere\Hungary.png" />
+    <Content Include="Bandiere\Iceland.png" />
+    <Content Include="Bandiere\India.png" />
+    <Content Include="Bandiere\Indonesia.png" />
+    <Content Include="Bandiere\Iran.png" />
+    <Content Include="Bandiere\Iraq.png" />
+    <Content Include="Bandiere\Ireland.png" />
+    <Content Include="Bandiere\Israel.png" />
+    <Content Include="Bandiere\Italy.png" />
+    <Content Include="Bandiere\Ivory Coast.png" />
+    <Content Include="Bandiere\Jamaica.png" />
+    <Content Include="Bandiere\Japan.png" />
+    <Content Include="Bandiere\Jordan.png" />
+    <Content Include="Bandiere\Kazakhstan.png" />
+    <Content Include="Bandiere\Kenya.png" />
+    <Content Include="Bandiere\Kosovo.png" />
+    <Content Include="Bandiere\Kuwait.png" />
+    <Content Include="Bandiere\Kyrgyzstan.png" />
+    <Content Include="Bandiere\Laos.png" />
+    <Content Include="Bandiere\Latvia.png" />
+    <Content Include="Bandiere\Lebanon.png" />
+    <Content Include="Bandiere\Lesotho.png" />
+    <Content Include="Bandiere\Liberia.png" />
+    <Content Include="Bandiere\Libya.png" />
+    <Content Include="Bandiere\Liechtenstein.png" />
+    <Content Include="Bandiere\Lithuania.png" />
+    <Content Include="Bandiere\Luxembourg.png" />
+    <Content Include="Bandiere\Macao.png" />
+    <Content Include="Bandiere\Malawi.png" />
+    <Content Include="Bandiere\Malaysia.png" />
+    <Content Include="Bandiere\Maldives.png" />
+    <Content Include="Bandiere\Mali.png" />
+    <Content Include="Bandiere\Malta.png" />
+    <Content Include="Bandiere\Mauritania.png" />
+    <Content Include="Bandiere\Mauritius.png" />
+    <Content Include="Bandiere\Mexico.png" />
+    <Content Include="Bandiere\Moldova.png" />
+    <Content Include="Bandiere\Mongolia.png" />
+    <Content Include="Bandiere\Montenegro.png" />
+    <Content Include="Bandiere\Morocco.png" />
+    <Content Include="Bandiere\Mozambique.png" />
+    <Content Include="Bandiere\Myanmar.png" />
+    <Content Include="Bandiere\Namibia.png" />
+    <Content Include="Bandiere\Netherlands.png" />
+    <Content Include="Bandiere\New Zealand.png" />
+    <Content Include="Bandiere\Nicaragua.png" />
+    <Content Include="Bandiere\Niger.png" />
+    <Content Include="Bandiere\Nigeria.png" />
+    <Content Include="Bandiere\North &amp; Central America.png" />
+    <Content Include="Bandiere\North Macedonia.png" />
+    <Content Include="Bandiere\Northern Ireland.png" />
+    <Content Include="Bandiere\Norway.png" />
+    <Content Include="Bandiere\Oman.png" />
+    <Content Include="Bandiere\Pakistan.png" />
+    <Content Include="Bandiere\Palestine.png" />
+    <Content Include="Bandiere\Panama.png" />
+    <Content Include="Bandiere\Paraguay.png" />
+    <Content Include="Bandiere\Peru.png" />
+    <Content Include="Bandiere\Philippines.png" />
+    <Content Include="Bandiere\Poland.png" />
+    <Content Include="Bandiere\Portugal.png" />
+    <Content Include="Bandiere\Qatar.png" />
+    <Content Include="Bandiere\Republic of the Congo.png" />
+    <Content Include="Bandiere\Romania.png" />
+    <Content Include="Bandiere\Russia.png" />
+    <Content Include="Bandiere\Rwanda.png" />
+    <Content Include="Bandiere\Réunion.png" />
+    <Content Include="Bandiere\San Marino.png" />
+    <Content Include="Bandiere\Saudi Arabia.png" />
+    <Content Include="Bandiere\Scotland.png" />
+    <Content Include="Bandiere\Senegal.png" />
+    <Content Include="Bandiere\Serbia.png" />
+    <Content Include="Bandiere\Seychelles.png" />
+    <Content Include="Bandiere\Sierra Leone.png" />
+    <Content Include="Bandiere\Singapore.png" />
+    <Content Include="Bandiere\Slovakia.png" />
+    <Content Include="Bandiere\Slovenia.png" />
+    <Content Include="Bandiere\Somalia.png" />
+    <Content Include="Bandiere\South Africa.png" />
+    <Content Include="Bandiere\South America.png" />
+    <Content Include="Bandiere\South Korea.png" />
+    <Content Include="Bandiere\Spain.png" />
+    <Content Include="Bandiere\Sri Lanka.png" />
+    <Content Include="Bandiere\Sudan.png" />
+    <Content Include="Bandiere\Sweden.png" />
+    <Content Include="Bandiere\Switzerland.png" />
+    <Content Include="Bandiere\Syria.png" />
+    <Content Include="Bandiere\Taiwan.png" />
+    <Content Include="Bandiere\Tajikistan.png" />
+    <Content Include="Bandiere\Tanzania.png" />
+    <Content Include="Bandiere\Thailand.png" />
+    <Content Include="Bandiere\Togo.png" />
+    <Content Include="Bandiere\Trinidad and Tobago.png" />
+    <Content Include="Bandiere\Tunisia.png" />
+    <Content Include="Bandiere\Turkey.png" />
+    <Content Include="Bandiere\Turkmenistan.png" />
+    <Content Include="Bandiere\Uganda.png" />
+    <Content Include="Bandiere\Ukraine.png" />
+    <Content Include="Bandiere\United Arab Emirates.png" />
+    <Content Include="Bandiere\Uruguay.png" />
+    <Content Include="Bandiere\USA.png" />
+    <Content Include="Bandiere\Uzbekistan.png" />
+    <Content Include="Bandiere\Venezuela.png" />
+    <Content Include="Bandiere\Vietnam.png" />
+    <Content Include="Bandiere\Wales.png" />
+    <Content Include="Bandiere\World.png" />
+    <Content Include="Bandiere\Yemen.png" />
+    <Content Include="Bandiere\Zambia.png" />
+    <Content Include="Bandiere\Zimbabwe.png" />
+    <Content Include="burgericon.png" />
     <Content Include="principal.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
